Fix Render deployment - health check and package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learnflow-backend",
+  "name": "skillforge-backend",
   "version": "1.0.0",
-  "description": "Backend for LearnFlow application",
+  "description": "Backend for SkillForge LMS",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,22 +11,31 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "compromise": "^14.14.5",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "natural": "^8.1.0",
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
-    "socket.io": "^4.8.3",
-    "vite_react_shadcn_ts": "file:.."
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "lms",
+    "education",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "Dhruvil Shah",
+  "license": "MIT"
 }
